Update VM status with attributes of a created interface
